--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,13 @@ body {
 .Navbar {
   color: #ffffff;
   padding: 50px;
-  background: #80bdc6;
-
+  background: #000000;
   text-align: center;
 }
 
 .Head {
   background: transparent;
-  text-align: left;
+  text-align: center;
   color: cornsilk;
   font-size: 20pt;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
