--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,17 @@ body {
   font-size: 20pt;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.button1 {
+  background-color: #1d2129;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #e9ebee;
+  align-items: center;
+}
+
+.body{
+  text-align: center;
+  margin: 0;
+  background: transparent;
+
+}
