--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 
 .Navbar {
   color: #ffffff;
-  padding: 50px;
+  padding: 5%;
   background: #000000;
   text-align: center;
 }
@@ -31,8 +31,16 @@ body {
 }
 
 .body{
-  text-align: center;
+  padding-top: 120%;
+  padding-bottom: 30%;
+  background-image: url("./images/main.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   margin: 0;
-  background: transparent;
+  background-color: #ffffff;
+  text-align: center;
 
 }
