--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,28 @@ body {
   text-align: center;
 
 }
+
+.download{
+  display: inline-block;
+  padding: 8px 25px;
+  font-size: 15px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #ff0000;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.download:hover{
+  background-color: #0048ff
+}
+
+.download:active{
+  background-color: #0048ff;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
