--- a/src/Card.css
+++ b/src/Card.css
@@ -1,5 +1,5 @@
 .cards {
-    padding: 4rem;
+    padding: 2rem;
     background: rgb(69, 66, 66);
   }
   
@@ -9,6 +9,7 @@
   
   .cards__container {
     display: flex;
+    
     flex-flow: column;
     align-items: center;
     max-width: 1120px;
@@ -32,10 +33,10 @@
     border-radius: 10px;
   }
   
-  .cards__item__link {
+  .cards__item__link {  /*กรอบ*/
     display: flex;
     flex-flow: column;
-    width: 450px;  
+    width: 300px;  
     box-shadow: 0 6px 20px rgba(186, 245, 9, 0.17);
     -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     filter: drop-shadow(0 6px 20px rgba(201, 18, 140, 0.017));
@@ -56,7 +57,7 @@
     animation-duration: 2s;
   }
   
-  .cards__item__pic-wrap::after {
+  .cards__item__pic-wrap::after {   /*ป้าย*/
     content: attr(data-category);
     position: absolute;
     bottom: 0;
@@ -99,7 +100,7 @@
     line-height: 24px;
   }
   
-  @media only screen and (min-width: 1200px) {
+  /* @media only screen and (min-width: 1200px) {
     .content__blog__container {
       width: 84%;
     }
@@ -115,4 +116,4 @@
     .cards__item {
       margin-bottom: 2rem;
     }
-  }
+  } */
