--- a/src/css/App.css
+++ b/src/css/App.css
@@ -38,6 +38,27 @@ body {
     color: white;
 }
 
+.select_button {
+    background-color: #1c1c1c;
+    color: white;
+    border-radius: 7px;
+    font-size: 13px;
+    width: 120px;
+    height: 60px;
+    text-align: center;
+    padding: 16px 32px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 50px 6px 25px;
+    cursor: pointer;
+    font-family: 'Kanit', sans-serif;
+}
+
+.select_button:hover {
+    background-color: #555555;
+    color: white;
+}
+
 .textTopic {
     font-size: 50px;
     font-weight: bold;
@@ -59,6 +80,19 @@ body {
     background-color: #e9ebee;
     font-size: 20px;
 }
+
+.inputBox2 {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    /* border: none; */
+    border-bottom: 2px solid black;
+    background-color: #e9ebee;
+    font-size: 20px;
+}
+
+
 
 .text1 {
     font-family: 'Kanit', sans-serif;
