--- a/src/css/App.css
+++ b/src/css/App.css
@@ -42,7 +42,7 @@ body {
     background-color: #1c1c1c;
     color: white;
     border-radius: 7px;
-    font-size: 16px;
+    font-size: 13px;
     width: 120px;
     height: 60px;
     text-align: center;
@@ -75,7 +75,7 @@ body {
     font-family: 'Kanit', sans-serif;
 }
 
-.select_button:hover {
+.cancel:hover {
     background-color: #555555;
     color: white;
 }
