--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Poppins&display=swap');
+
 *{
   box-sizing: border-box;
 }
@@ -54,10 +56,13 @@ body {
   text-decoration: none;
   outline: none;
   color: #fff;
-  background-color: #ff0000;
+  background-color: #7cb518;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
+  /* box-shadow: 0 1px #999; */
+  margin-left: 20px;
+  margin: 20px;
+  /* font-family: 'Poppins', sans-serif; */
 }
 
 .download:hover{
