--- a/src/css/App.css
+++ b/src/css/App.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-content: center;
 }
 .button {
     background-color: #1c1c1c;
@@ -39,11 +40,10 @@ body {
 }
 
 .select_button {
-    background-color: #1c1c1c;
+    /* background-color: #7cb518;
     color: white;
-    border-radius: 7px;
-    font-size: 13px;
-    width: 120px;
+    font-size: 15px;
+    width: 120px; 
     height: 60px;
     text-align: center;
     padding: 16px 32px;
@@ -52,6 +52,21 @@ body {
     margin: 50px 6px 25px;
     cursor: pointer;
     font-family: 'Kanit', sans-serif;
+    border-radius: 15px; */
+
+    display: inline-block;
+    padding: 8px 25px;
+    font-size: 15px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #7cb518;
+    border: none;
+    border-radius: 15px;
+    margin-left: 20px;
+    margin: 20px;
 }
 
 .select_button:hover {
@@ -62,18 +77,18 @@ body {
 .cancel {
     background-color: #1c1c1c;
     color: white;
-    border-radius: 7px;
+    border-radius: 10px;
     font-size: 16px;
-    width: 120px;
+    width: 150px;
     height: 60px;
     text-align: center;
-    padding: 16px 32px;
+    padding: 16px 30px;
     text-decoration: none;
-    display: inline-block;
+    /* display: inline-block; */
     margin: 50px 6px 25px;
     cursor: pointer;
     font-family: 'Kanit', sans-serif;
-    margin-left: 100px;
+    margin-left: 20px;
 }
 
 .cancel:hover {
@@ -109,9 +124,10 @@ body {
     margin: 8px 0;
     box-sizing: border-box;
     border: none;
-    border-bottom: 2px solid black;
-    background-color: #e9ebee;
+    /* border-bottom: 2px solid black; */
     font-size: 20px;
+    background-color: transparent;
+
 }
 
 .text1 {
@@ -160,6 +176,3 @@ body {
     font-family: 'Kanit', sans-serif;
     margin-left: 10px;
 }
-
-
-
